--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -35,6 +35,7 @@
 }
 
 .category {
+	border: 2px solid var(--border-category);
 	transition: 0.3s;
 }
 
@@ -52,7 +53,7 @@
 .floating-contact {
 	right: 0px;
 	bottom: 50%;
-	background-color: #2C3E50;
+	background-color: var(--bg-floating-contact);
 	padding: 0px;
 	border-top-left-radius: 10px;
 	border-bottom-left-radius: 10px;
@@ -75,7 +76,7 @@
 
 /* Account page */
 .account-item:hover {
-	background-color: #1abc9c;
+	background-color: var(--bg-primary);
 }
 
 .account-item a:hover {
@@ -152,6 +153,7 @@
 	background-color: #2C3E50;
 	text: white;
 	padding: 4px 10px;
+	border: 2px solid var(--border-category);
 	border-radius: 5px;
 	box-sizing: border-box;
 }
@@ -177,4 +179,3 @@
 .data-table th {
 	text-align: center;
 }
-
