--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -20,7 +20,7 @@
 <section class="page-section first-section mt-3">
     <div class="container">
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _("Contact") }}</h2>
+            <h2 class="page-section-heading header-standard mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _("Contact") }}</h2>
         </div>
 
         <div class="divider-custom">
@@ -39,7 +39,7 @@
             </div>
 
             <div class="d-none d-md-block col-md-6">
-                <img src="{{ m.static('images/question.png') }}" class="p-5 mw-100" style="max-height: 400px">
+                <img src="{{ m.light_dark_image('question.png') }}" class="p-5 mw-100" style="max-height: 400px">
             </div>
         </div>
     </div>
