--- a/frontend/templates/credits.html
+++ b/frontend/templates/credits.html
@@ -8,7 +8,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _("Credits") }}</h2>
+            <h2 class="page-section-heading header-standard mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _("Credits") }}</h2>
         </div>
 
         <!-- Icon Divider-->
@@ -21,14 +21,14 @@
         <div class="row justify-content-center">
             <div class="col-12 text-center">
                 <a href="http://www.flaticon.com" target="_blank">
-                <img src="{{ m.static('images/flaticon.png') }}" class="mw-100"><br/>
-                    <span>{{ _("Icons made by Pixel perfect from www.flaticon.com") }}</span>
+                    <img src="{{ m.static('images/flaticon.png') }}" class="mw-100"><br/>
+                    <span class="text-background">{{ _("Icons made by Pixel perfect from www.flaticon.com") }}</span>
                 </a>
             </div>
 
             <div class="col-12 text-center mt-5">
                 <a href="https://startbootstrap.com/theme/freelancer" target="_blank">
-                <img src="{{ m.static('images/startbootstrap.png') }}" class="mw-100"><br/>
+                    <img src="{{ m.static('images/startbootstrap.png') }}" class="mw-100"><br/>
                     <span>{{ _("Page template by www.startbootstrap.com") }}</span>
                 </a>
             </div>
