--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block sections %}
 <!-- Header-->
-<header class="masthead bg-primary text-white text-center round-bottom">
+<header class="masthead bg-primary text-primary text-center round-bottom">
     <div class="container d-flex align-items-center flex-column">
         <h1 class="masthead-heading mb-4">Social Insight</h1>
 
@@ -38,7 +38,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase">{{ _('Features') }}</h2>
+            <h2 class="page-section-heading header-standard mb-0 d-inline-block text-uppercase">{{ _('Features') }}</h2>
         </div>
 
         <!-- Icon Divider-->
@@ -75,12 +75,12 @@
 </section>
 
 <!-- How to get file Section -->
- <section class="page-section bg-primary text-white portfolio pt-5 pb-0 round-top" id="howToGetSection">
+ <section class="page-section bg-primary portfolio pt-5 pb-0 round-top" id="howToGetSection">
     <div class="container">
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-white mb-0 d-inline-block text-uppercase">{{ _('How to get data file?') }}</h2>
+            <h2 class="page-section-heading header-filled mb-0 d-inline-block text-uppercase">{{ _('How to get data file?') }}</h2>
         </div>
 
         <!-- Icon Divider-->
@@ -97,7 +97,7 @@
                     <img class="img-fluid" src="{{ m.static('images/foo.png') }}" data-aos="fade-left" data-aos-duration="1000"/>
                 </div>
             </div>
-            <div class="col-12 col-md-6 mb-5">
+            <div class="col-12 col-md-6 mb-5 text-primary">
                 <p class="text-justify">{{ lorem.paragraph() }}</p>
             </div>
         </div>
