--- a/frontend/templates/parts/_collations_list.html
+++ b/frontend/templates/parts/_collations_list.html
@@ -1,14 +1,14 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 text-center">
-            <h2 class="page-section-heading text-secondary mb-4 d-inline-block text-uppercase">{{ _('Collations') }}</h2>
+            <h2 class="page-section-heading header-standard mb-4 d-inline-block text-uppercase">{{ _('Collations') }}</h2>
         </div>
     </div>
 
     <div class="row">
         <div class="col-12 text-center">
             <div class="card">
-                <div class="card-header bg-secondary text-white">
+                <div class="card-header bg-secondary text-secondary">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12 col-sm-4">{{ _('Name') }}</div>
@@ -17,26 +17,26 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-body p-0 m-0">
+                <div class="card-body bg-background p-0 m-0">
                     <ul class="list-group list-group-flush">
                         {% for collation in current_user.collations %}
-                        <li class="list-group-item account-item">
-                            <a href="{{ url_for('main.collation', id=collation.id) }}" class="text-secondary">
+                        <a class="no-underline" href="{{ url_for('main.collation', id=collation.id) }}">
+                            <li class="list-group-item account-item">
                                 <div class="container-fluid">
                                     <div class="row">
                                         <div class="col-12 col-sm-4 align-middle m-auto">
                                             {{ collation.name }}
                                         </div>
                                         <div class="col-12 col-sm-4 m-auto">
-                                            0
+                                            {{ collation.size() }}
                                         </div>
                                         <div class="col-12 col-sm-4">
                                             {{ moment(collation.creation_date).format('l') }} {{ moment(collation.creation_date).format('HH:mm') }}
                                         </div>
                                     </div>
                                 </div>
-                            </a>
-                        </li>
+                            </li>
+                        </a>
                         {% endfor %}
 
                         {% if not current_user.collations %}
@@ -52,7 +52,7 @@
                         {% endif %}
                     </ul>
                 </div>
-                <div class="card-footer bg-secondary text-white">
+                <div class="card-footer bg-secondary text-secondary">
                     <a href="{{ url_for('main.create_collation') }}" class="text-white">{{ _('Create new collation') }}</a>
                 </div>
             </div>
