--- a/frontend/templates/password_reset.html
+++ b/frontend/templates/password_reset.html
@@ -15,7 +15,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _("Reset password") }}</h2>
+            <h2 class="page-section-heading header-standard mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _("Reset password") }}</h2>
         </div>
 
         <!-- Icon Divider-->
