--- a/frontend/templates/password_reset_request.html
+++ b/frontend/templates/password_reset_request.html
@@ -23,7 +23,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _("Reset password") }}</h2>
+            <h2 class="page-section-heading header-standard mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _("Reset password") }}</h2>
         </div>
 
         <!-- Icon Divider-->
@@ -35,7 +35,7 @@
 
         <div class="row text-center">
             <div class="col-12 col-lg-12">
-                <p>{{ _("Enter you email address bellow.") }} <br />{{ _("If it is valid you will receive instruction to reset Your password") }}</p>
+                <p>{{ _("Enter you email address bellow.") }} <br />{{ _("If it is valid you will receive instruction to reset Your password") }}</p><br />
             </div>
         </div>
 
