--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -23,7 +23,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block" data-aos="fade-up" data-aos-duration="500">{{ _("REGISTER") }}</h2>
+            <h2 class="page-section-heading header-standard mb-0 d-inline-block" data-aos="fade-up" data-aos-duration="500">{{ _("REGISTER") }}</h2>
         </div>
 
         <!-- Icon Divider-->
