--- a/frontend/templates/macros/general.html
+++ b/frontend/templates/macros/general.html
@@ -6,6 +6,14 @@
 {% endif %}
 {% endmacro -%}
 
+{% macro light_dark_image(name) -%}
+{% if is_dark_mode() %}
+{{ static('images/dark/'+name) }}
+{% else %}
+{{ static('images/light/'+name) }}
+{% endif %}
+{% endmacro -%}
+
 {% macro script(name) -%}
 <script type="text/javascript">
 {% include name %}
