--- a/frontend/templates/parts/_categories.html
+++ b/frontend/templates/parts/_categories.html
@@ -25,7 +25,7 @@
             <!-- Portfolio Item 1-->
             <div class="col-6 col-lg-3 mb-4">
                 <div class="portfolio-item mx-auto category {% if category=='messages' %}category-selected{% endif %}">
-                    <a href="{{ url_for('main.graphs_category', id=pack.id, category='messages') }}">
+                    <a class="no-underline" href="{{ url_for('main.graphs_category', id=pack.id, category='messages') }}">
                         <img class="img-fluid" src="{{ m.static('images/category_messages.png') }}" alt="" />
                         <div class="bg-secondary text-light text-center">{{ _("messages") }}</div>
                     </a>
@@ -34,7 +34,7 @@
             <!-- Portfolio Item 2-->
             <div class="col-6 col-lg-3 mb-4">
                 <div class="portfolio-item mx-auto category {% if category=='posts' %}category-selected{% endif %}">
-                    <a href="{{ url_for('main.graphs_category', id=pack.id, category='posts') }}">
+                    <a class="no-underline" href="{{ url_for('main.graphs_category', id=pack.id, category='posts') }}">
                         <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
                         <div class="bg-secondary text-light text-center">{{ _("posts") }}</div>
                     </a>
@@ -43,7 +43,7 @@
             <!-- Portfolio Item 3-->
             <div class="col-6 col-lg-3 mb-4">
                 <div class="portfolio-item mx-auto category {% if category=='miscellaneous' %}category-selected{% endif %}">
-                    <a href="{{ url_for('main.graphs_category', id=pack.id, category='miscellaneous') }}">
+                    <a class="no-underline" href="{{ url_for('main.graphs_category', id=pack.id, category='miscellaneous') }}">
                         <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
                         <div class="bg-secondary text-light text-center">{{ _("miscellaneous") }}</div>
                     </a>
@@ -52,7 +52,7 @@
             <!-- Portfolio Item 4-->
             <div class="col-6 col-lg-3 mb-4 mb-lg-0">
                 <div class="portfolio-item mx-auto category {% if category=='other' %}category-selected{% endif %}">
-                    <a href="{{ url_for('main.graphs_category', id=pack.id, category='other') }}">
+                    <a class="no-underline" href="{{ url_for('main.graphs_category', id=pack.id, category='other') }}">
                         <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
                         <div class="bg-secondary text-light text-center">{{ _("other") }}</div>
                     </a>
