Dodanie kompletnej sekcji 'How to get data file' na stronie głównej

--- a/frontend/templates/account.html
+++ b/frontend/templates/account.html
@@ -20,7 +20,7 @@
 
         <div class="row">
             <div class="col-auto">
-                <img src="{{ m.light_dark_image('user_icon.png') }}" style="width: 130px" />
+                <img src="{{ m.theme_image('user_icon.png') }}" style="width: 130px" />
             </div>
             <div class="col-auto">
                 <p class="text-secondary">{{ current_user.email }}</p>
