--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="d-none d-md-block col-md-6">
-                <img src="{{ m.light_dark_image('question.png') }}" class="p-5 mw-100" style="max-height: 400px">
+                <img src="{{ m.theme_image('question.png') }}" class="p-5 mw-100" style="max-height: 400px">
             </div>
         </div>
     </div>
