--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -91,14 +91,62 @@
         </div>
 
         <!-- How to get row -->
-        <div class="row justify-content-center">
+        <div class="row justify-content-center align-items-center">
             <div class="col-12 col-md-6 mb-3">
                 <div class="portfolio-item mx-auto mb-md-4">
-                    <img class="img-fluid" src="{{ m.static('images/foo.png') }}" data-aos="fade-left" data-aos-duration="1000"/>
+                    <img class="img-fluid" src="{{ m.lang_image('how_get_1.png') }}" data-aos="fade-left" data-aos-duration="1000"/>
                 </div>
             </div>
             <div class="col-12 col-md-6 mb-5 text-primary">
-                <p class="text-justify">{{ lorem.paragraph() }}</p>
+                <p class="text-justify">{{ _('First log in to your facebook account. Then look at upper right corner, click <b>Settings & privacy</b> from the dropdown and then <b>Setting</b>.') }}</p>
+            </div>
+        </div>
+
+        <!-- How to get row -->
+        <div class="row justify-content-center align-items-center">
+            <div class="col-12 col-md-6 order-md-2 mb-3">
+                <div class="portfolio-item mx-auto mb-md-4">
+                    <img class="img-fluid" src="{{ m.lang_image('how_get_2.png') }}" data-aos="fade-right" data-aos-duration="1000"/>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 order-md-1 mb-5 text-primary">
+                <p class="text-justify">{{ _('Select <b>Your Facebook information</b> from Settings panel on the left.') }}</p>
+            </div>
+        </div>
+
+        <!-- How to get row -->
+        <div class="row justify-content-center align-items-center">
+            <div class="col-12 col-md-6 mb-3">
+                <div class="portfolio-item mx-auto mb-md-4">
+                    <img class="img-fluid" src="{{ m.lang_image('how_get_3.png') }}" data-aos="fade-left" data-aos-duration="1000"/>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 mb-5 text-primary">
+                <p class="text-justify">{{ _('Click <b>Download your Information</b> on the central panel.') }}</p>
+            </div>
+        </div>
+
+        <!-- How to get row -->
+        <div class="row justify-content-center align-items-center">
+            <div class="col-12 col-md-6 order-md-2 mb-3">
+                <div class="portfolio-item mx-auto mb-md-4">
+                    <img class="img-fluid" src="{{ m.lang_image('how_get_4.png') }}" data-aos="fade-right" data-aos-duration="1000"/>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 order-md-1 mb-5 text-primary">
+                <p class="text-justify">{{ _('Select data which you want to download. The more you select the more we can analyse. Remember to change <b>Format</b> from HTML to <b>JSON</b>! Then click <b>Create File</b>.') }}</p>
+            </div>
+        </div>
+
+        <!-- How to get row -->
+        <div class="row justify-content-center align-items-center">
+            <div class="col-12 col-md-6 mb-3">
+                <div class="portfolio-item mx-auto mb-md-4">
+                    <img class="img-fluid" src="{{ m.lang_image('how_get_5.png') }}" data-aos="fade-left" data-aos-duration="1000"/>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 mb-5 text-primary">
+                <p class="text-justify">{{ _('Now you have to wait some time. It may take few seconds to few hours, depending on how much data have to be prepared. When you data file is ready you will receive <b>notification</b>. Just click it, download and send to us!') }}</p>
             </div>
         </div>
     </div>
