--- a/frontend/templates/macros/general.html
+++ b/frontend/templates/macros/general.html
@@ -6,12 +6,16 @@
 {% endif %}
 {% endmacro -%}
 
-{% macro light_dark_image(name) -%}
+{% macro theme_image(name) -%}
 {% if is_dark_mode() %}
 {{ static('images/dark/'+name) }}
 {% else %}
 {{ static('images/light/'+name) }}
 {% endif %}
+{% endmacro -%}
+
+{% macro lang_image(name) -%}
+{{ static('images/' + get_locale() + '/'+name) }}
 {% endmacro -%}
 
 {% macro script(name) -%}
