--- a/frontend/templates/parts/_language_modal.html
+++ b/frontend/templates/parts/_language_modal.html
@@ -16,10 +16,10 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-6 language-tile">
-                            <a href="{{ url_for('main.change_language', lang='en') }}"><img class="mb-5" src="{{ m.light_dark_image('english.png') }}" alt="English"/></a>
+                            <a href="{{ url_for('main.change_language', lang='en') }}"><img class="mb-5" src="{{ m.theme_image('english.png') }}" alt="English"/></a>
                         </div>
                         <div class="col-12 col-md-6 language-tile">
-                            <a href="{{ url_for('main.change_language', lang='pl') }}"><img class="mb-5" src="{{ m.light_dark_image('polish.png') }}" alt="Polish"/></a>
+                            <a href="{{ url_for('main.change_language', lang='pl') }}"><img class="mb-5" src="{{ m.theme_image('polish.png') }}" alt="Polish"/></a>
                         </div>
                         <div class="col-12">
                             <button class="btn btn-primary text-capitalize" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>{{ _("Close window") }}</button>
