--- a/frontend/static/css/light.css
+++ b/frontend/static/css/light.css
@@ -23,6 +23,7 @@
     --bg-floating-contact: #2C3E50;
 
     --bg-graph: white;
+    --text-graph: black;
 
     --border-category: 2px #1abc9c white;
 }
