--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -86,6 +86,7 @@
 
 /* Graphs page */
 .graph-header {
+	color: var(--text-graph);
 	margin-top: 15px;
 	font-size: 25px;
 	text-transform: uppercase;
