--- a/frontend/templates/parts/_rename_collation_modal.html
+++ b/frontend/templates/parts/_rename_collation_modal.html
@@ -7,7 +7,7 @@
                     <div class="row justify-content-center">
                         <div class="col-12">
                             <!-- Portfolio Modal - Title-->
-                            <h2 class="portfolio-modal-title text-secondary mb-0 text-capitalize">{{ _("Rename collation") }}</h2>
+                            <h2 class="portfolio-modal-title header-standard mb-0 text-capitalize">{{ _("Rename collation") }}</h2>
                             <!-- Icon Divider-->
                             <div class="divider-custom">
                                 <div class="divider-custom-line"></div>
