Dodana specialna trasa dla favicon.ico

--- a/frontend/templates/basic.html
+++ b/frontend/templates/basic.html
@@ -18,7 +18,7 @@
         <title>Social Insight{% if self.title() %} | {{ self.title() }}{% endif %}</title>
 
         <!-- Icon -->
-        <link rel="shortcut icon" href="{{ url_for('static', filename='images/icon.ico') }}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
         <!-- Stylesheets -->
         {% if is_dark_mode() %}
