--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -22,7 +22,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _('Logging') }}</h2>
+            <h2 class="page-section-heading header-standard mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _('Logging') }}</h2>
         </div>
 
         <!-- Icon Divider-->
