--- a/frontend/templates/mails/basic.html
+++ b/frontend/templates/mails/basic.html
@@ -92,7 +92,7 @@
                                            width='40%'>
                                         <tbody>
                                         <td align='center'>
-                                            <img src='https://i.ibb.co/0sRvNB8/logo-white-long.png' width='100%'>
+                                            <h1 style="margin: 5px; color: white;">Social Insight</h1>
                                         </td>
                                         </tr>
                                         </tbody>
@@ -143,50 +143,6 @@
                         <tr>
                             <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
                     <![endif]-->
-                    <div style='background:#414141;background-color:#414141;margin:0px auto;max-width:600px;'>
-                        <table align='center' border='0' cellpadding='0' cellspacing='0' role='presentation'
-                               style='background:#414141;background-color:#414141;width:100%;'>
-                            <tbody>
-                            <tr>
-                                <td style='direction:ltr;font-size:0px;padding:20px 0;padding-bottom:0px;text-align:center;vertical-align:top;'>
-                                    <!--[if mso | IE]>
-                                    <table role="presentation" border="0" cellpadding="0" cellspacing="0">
-                                        <tr>
-                                            <td style="vertical-align:top;width:600px;">
-                                    <![endif]-->
-                                    <div class='dys-column-per-100 outlook-group-fix'
-                                         style='direction:ltr;display:inline-block;font-size:13px;text-align:left;vertical-align:top;width:100%;'>
-                                        <table border='0' cellpadding='0' cellspacing='0' role='presentation'
-                                               style='vertical-align:top;' width='100%'>
-                                            <tr>
-                                                <td align='center'
-                                                    style='font-size:0px;padding:10px 25px;word-break:break-word;'>
-                                                    <table border='0' cellpadding='0' cellspacing='0'
-                                                           style='cellpadding:0;cellspacing:0;color:#000000;font-family:Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;table-layout:auto;width:40%;'
-                                                           width='40%'>
-                                                        <tbody>
-                                                        <td align='center'>
-                                                            <a href='https://facebook.com'>
-                                                                <img alt='facebook' height='50px'
-                                                                     src='https://swu-cs-assets.s3.amazonaws.com/OSET/neopolitan/facebook.png'
-                                                                     width='50px'>
-                                                            </a>
-                                                        </td>
-                                                        </tr>
-                                                        </tbody>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </div>
-                                    <!--[if mso | IE]>
-                                    </td></tr></table>
-                                    <![endif]-->
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
                     <!--[if mso | IE]>
                     </td></tr></table>
                     <![endif]-->
@@ -213,8 +169,8 @@
                                             <tr>
                                                 <td align='center'
                                                     style='font-size:0px;padding:10px 25px;word-break:break-word;'>
-                                                    <div style="color:#BBBBBB;font-family:'Droid Sans', 'Helvetica Neue', Arial, sans-serif;font-size:12px;line-height:1;text-align:center;">
-                                                        Social Insight, like on on Facebook
+                                                    <div style="color:white;font-family:'Droid Sans', 'Helvetica Neue', Arial, sans-serif;font-size:12px;line-height:1;text-align:center;">
+                                                        Social Insight, like on on <a href='https://facebook.com' style="color: white; text-decoration: none;">Facebook</a>
                                                     </div>
                                                 </td>
                                             </tr>
