--- a/frontend/templates/parts/_flash.html
+++ b/frontend/templates/parts/_flash.html
@@ -3,7 +3,7 @@
         {% for category, message in get_flashed_messages(with_categories=true) %}
         <div class="row">
             <div class="col-12">
-                <div>
+                <div class="flash-message">
                     {% with class = "" %}
                     {% if category == 'error' %}
                         {% set class = 'alert-danger' %}
