Zmniejszone niespójnosci w wyglądzie maili na różnych pocztach

--- a/frontend/templates/mails/confirmation.html
+++ b/frontend/templates/mails/confirmation.html
@@ -4,32 +4,7 @@
 <tr>
 <td align='center'
     style='font-size:0px;padding:10px 25px;word-break:break-word;'>
-    <table border='0' cellpadding='0' cellspacing='0'
-           role='presentation'
-           style='border-collapse:collapse;border-spacing:0px;'>
-        <tbody>
-        <tr>
-            <td style='width:216px;'>
-                <img alt=''
-                     src="https://i.ibb.co/gdzCkvD/logo-white-icon.png"
-                     style='border:none;display:block;font-size:13px;height:189px;outline:none;text-decoration:none;'/>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</td>
-</tr>
-<tr>
-<td align='center'
-    style='font-size:0px;padding:10px 25px;word-break:break-word;'>
-    <div style="color:#FFFFFF;font-family:'Droid Sans', 'Helvetica Neue', Arial, sans-serif;font-size:36px;line-height:1;text-align:center;">
-    </div>
-</td>
-</tr>
-<tr>
-<td align='center'
-    style='font-size:0px;padding:10px 25px;word-break:break-word;'>
-    <div style="color:#187272;font-family:'Droid Sans', 'Helvetica Neue', Arial, sans-serif;font-size:16px;line-height:20px;text-align:center;">
+    <div style="color:white;font-family:'Droid Sans', 'Helvetica Neue', Arial, sans-serif;font-size:16px;line-height:20px;text-align:center;">
         Welcome new user!
         <br/>
         Activate your account with this button!
