--- a/frontend/templates/mails/basic.html
+++ b/frontend/templates/mails/basic.html
@@ -12,7 +12,7 @@
       			.ReadMsgBody{width: 100%;}
       			.ExternalClass{width: 100%;}
       			.ExternalClass *{line-height: 100%;}
-      			body{margin: 0; padding: 0; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
+      			body{margin: 0; padding: 0; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; color: white;}
       			table, td{border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;}
       			img{border: 0; height: auto; line-height: 100%; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic;}
       			p{display: block; margin: 13px 0;}
@@ -75,7 +75,7 @@
                style='background:#414141;background-color:#414141;width:100%;'>
             <tbody>
             <tr>
-                <td style='direction:ltr;font-size:0px;padding:20px 0;padding-bottom:0px;text-align:center;vertical-align:top;'>
+                <td style='direction:ltr;font-size:0px;padding:0px 0;padding-bottom:0px;text-align:center;vertical-align:top;'>
                     <!--[if mso | IE]>
                     <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                         <tr>
@@ -156,7 +156,7 @@
                                style='background:#414141;background-color:#414141;width:100%;'>
                             <tbody>
                             <tr>
-                                <td style='direction:ltr;font-size:0px;padding:20px 0;padding-top:0px;text-align:center;vertical-align:top;'>
+                                <td style='direction:ltr;font-size:0px;padding:0px 0;padding-top:0px;text-align:center;vertical-align:top;'>
                                     <!--[if mso | IE]>
                                     <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                         <tr>
