--- a/frontend/templates/basic.html
+++ b/frontend/templates/basic.html
@@ -37,7 +37,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.2/min/dropzone.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        {% if config['SNOW'] %}
+        {% if Global.get_christmas_event() %}
         <script src="{{ m.static('scripts/jquery.flurry.min.js') }}"></script>
         {% endif %}
         {{ moment.include_moment(version='2.29.1') }}
