--- a/frontend/templates/category.html
+++ b/frontend/templates/category.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "macros/render_browser.html" as browser %}
 
-{% block title %}Paczka{% endblock %}
+{% block title %}{{ _("Category") }} {{ category }}{% endblock %}
 
 {% block topscripts %}
 {{ super() }}
