Dodana możliwosc odpowiadania na wiadomosci w panelu administratora

--- a/frontend/templates/mails/reply.html
+++ b/frontend/templates/mails/reply.html
@@ -5,10 +5,9 @@
 <td align='left'
     style='font-size:0px;padding:10px 25px;word-break:break-word;'>
     <div style="color:black;font-family:'Droid Sans', 'Helvetica Neue', Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;">
-        <h1 style="text-align: center;">Message</h1>
-        <p><b>Nadawca:</b> {{form.email.data}}</p>
-        <p><b>Temat:</b> {{form.topic.data}}</p>
-        <p style="text-align: justify"><b>Content:</b> {{form.content.data}}</p>
+        <h1 style="text-align: center;">Reply</h1>
+        <p><b>Your message:</b> {{message.content}}</p>
+        <p><b>Response:</b> {{response}}</p>
     </div>
 </td>
 </tr>
