--- a/frontend/templates/admin.html
+++ b/frontend/templates/admin.html
@@ -31,8 +31,10 @@
 <section class="page-section pt-3">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12">
-                <div class="graph-button {% if not Global.get_christmas_event() %}disable{% endif %}" id="christmas-button"><a onclick="toggleChristmasEvent()">{{ _("Christmas theme") }}</a></div>
+            <div class="col-12 text-center">
+                <div class="graph-button p-4 {% if not Global.get_christmas_event() %}disable{% endif %}" id="christmas-button"><a onclick="toggleChristmasEvent()">{{ _("Christmas theme") }}</a></div>
+                <div class="graph-button p-4"><a href="{{ url_for('admin.messages') }}">{{ _("Messages") }} <span class="badge badge-light">{{ messages_count }}</span></a></div>
+                <div class="graph-button p-4"><a>{{ _("Users") }} <span class="badge badge-light">{{ users_count }}</span></a></div>
             </div>
         </div>
     </div>
