--- a/frontend/static/css/bootstrap.css
+++ b/frontend/static/css/bootstrap.css
@@ -4703,7 +4703,7 @@ a.badge-dark:focus {
     display: block;
     padding: 0.75rem 1.25rem;
     background-color: inherit;
-    border: 0.125rem solid rgba(0, 0, 0, 0.125);
+    border: 0.125rem solid var(--text-background);
 }
 .list-group-item:first-child {
     border-top-left-radius: 0.5rem;
