--- a/frontend/templates/admin_messages.html
+++ b/frontend/templates/admin_messages.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="text-center">
-                    <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase">{{ _('Messages') }}</h2>
+                    <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _('Messages') }}</h2>
                 </div>
             </div>
         </div>
