--- a/frontend/static/css/pdf_fancy.css
+++ b/frontend/static/css/pdf_fancy.css
@@ -52,3 +52,11 @@ body {
 	page-break-before: always;
 	height: 1365px;
 }
+
+.table-of-contents {
+	margin-top: 30px;
+	border: 2px solid black;
+	border-radius: 20px;
+	padding: 20px;
+	background-color: white;
+}
