--- a/frontend/static/css/pdf_print.css
+++ b/frontend/static/css/pdf_print.css
@@ -9,7 +9,6 @@
 
 .graph {
 	page-break-inside: avoid;
-
 }
 
 .graph-body {
@@ -42,4 +41,13 @@
 body {
 	padding: 30px;
 	font-family: 'Arial'
+}
+
+.table-of-contents {
+	margin-top: 30px;
+	border: 2px solid black;
+	margin: 20px;
+	border-radius: 20px;
+	padding: 20px;
+	background-color: white;
 }
