--- a/frontend/templates/macros/render_pdf.html
+++ b/frontend/templates/macros/render_pdf.html
@@ -1,10 +1,16 @@
 {% import "macros/general.html" as m %}
 
-{% macro render(graph) -%}
+{% macro render(graph, ordinal) -%}
 <div class="graph">
   <div class="space"></div>
   <div class="graph-body">
-  <h2 class="graph-header">{{ graph.get_name() }}</h2>
+    <table width="100%">
+      <tr>
+        <td style="width: 50px;"><h2>{{ordinal}}</h2></td>
+        <td style="text-align: center;"><h2 class="graph-header">{{ graph.get_name() }}</h2></td>
+        <td style="width: 50px;"></td>
+      </tr>
+    </table>
     {{ render_sth(graph.data) }}
   </div>
 </div>
